Primera estructura de HTML - Pantalla 1- Historia de usuario 1

--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,62 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Data Lovers</title>
+    <title>League of Legend Data</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="image/png" href="https://vignette.wikia.nocookie.net/leagueoflegendsoficial/images/8/8c/LOL_Logo.png/revision/latest?cb=20180119195439&path-prefix=es"/>
   </head>
   <body>
+
+
+    <!-- ESTE ES EL HEADER Y BANNER DE LA PRIMERA PANTALLA -->
+    <header>
+      <img id="logo" src="" alt="logo">
+    </header>
+    <main id="banner">
+      <img src="" alt="banner">
+      <div>
+      <h1></h1>
+      </div>
+    </main>
+    
+    <!-- ESTE SECTION MUESTRA LA PRIMERA HISTORIA DE USUARIO - TOP 5 -->
+    <Section>
+      <p id="descripcion-del-ranking-ejemplo"></p>
+      <div id="descripiones-de-los-top-5">
+        <div id="primer-campeon">
+          <h4 id="nombre-del-campeon"></h4>
+          <img src="" alt="">
+          <p>
+            <!-- acá podrian ir el rol del campeon-->
+          </p>
+          <p>
+            <!-- acá podrian ir la descripción (blurb)-->
+          </p>
+          <div>
+            <!-- acá podrian ir los niveles -->
+          </div>
+        </div>
+        <div id="segundo-campeon"></div>
+        <div id="tercer-campeon"></div>
+        <div id="cuarto-campeon"></div>
+        <div id="quinto-campeon"></div>
+      </div>
+    </Section>
+
+<!-- OPCIÓN QUE PERMITE IR A LOS TIPOS DE ROL -->
+
+    <button id="campeones-por-rol"></button>
+
+    <footer></footer>
+
+
     <div id="root"></div>
     <!-- <script src="./data/injuries/injuries.js"></script> -->
     <!-- <script src="./data/pokemon/pokemon.js"></script> -->
     <!-- <script src="./data/steam/steam.js"></script> -->
     <!-- <script src="./data/worldbank/worldbank.js"></script> -->
-    <!-- <script src="./data/lol/lol.js"></script> -->
+    <script src="./data/lol/lol.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
   </body>
-</html>
+</html> 
