--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <!-- ESTE ES EL HEADER Y BANNER DE LA PRIMERA PANTALLA -->
     <header >
         <div class="container">
-          <img class ="logo" src="img/icon-lol.png" alt="logo">
+          <img class ="logo" src="img/icon2.jpg" alt="logo">
           <input type="checkbox" id="menu-bar"> 
           <label class="icon-menu" for="menu-bar"></label>
           <nav class="menu">
@@ -65,6 +65,10 @@
     
 
     <footer>
+      <img src="img/lol.png" alt="Logo para footer" >
+      <div>
+        <a class ="href=""></a>
+      </div>
       <p>Copyright © Todos los Derechos Reservados - Conoce y comparte</p>
     </footer>
 
