--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,8 @@
 
     <button onclick="topFunction()" id="scrollToTop" title="Go to top">Top</button>
 
+    <p id="lulu"></p>
+    
     <footer>
       <div id="logo-en-footer">
           <img src="img/lol.png" alt="Logo para footer" >
