Se aplican cambios css a segunda historia según prototipo de alta fidelidad y zeplin

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,11 @@
 </div>
 
 <!-- ESTE SECTION MUESTRA LA SEGUNDA HISTORIA DE USUARIO - ROLES-->
-<section id='segunda-pantalla' class='body'></section>
+<section id='segunda-pantalla' class='body'>
+    <h1 id="roles-titulo">Roles en el juego</h1>
+    <div id='todos-los-roles'></div>
+
+</section>
 <!-- BOTÓN PARA SUBIR AL INICIO -->
       <button onclick=topFunction() id="scrollToTop" title="Go to top">Top</button>
 <!-- FOOTER-->
