testeo de usabilidad con usuario

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
           <nav class="menu">
             <a href="#primera-pantalla">HOME</a>
             <a id='ir-a-roles' href="#segunda-pantalla">ROLES</a>
-            <a href="">CAMPEONES</a>
-            <a href="">GUÍA RÁPIDA</a>
+            <a  href="">CAMPEONES</a>
+            <a id='ir-a-tutorial' href="#tutorial">GUÍA RÁPIDA</a>
           </nav>
       </div>
     </header>
@@ -53,7 +53,7 @@
     </section>    
 <!-- Tutorial -->
         <p class= 'end'>Aprende a leer estadisticas Lol en 20 segundos</p>
-      <iframe width="300" height="250" src="https://www.youtube.com/embed/yrMHPABTw38" frameborder="0" allow="accelerometer; autoplay" allowfullscreen></iframe>
+      <iframe id="tutorial" width="300" height="250" src="https://www.youtube.com/embed/yrMHPABTw38" frameborder="0" allow="accelerometer; autoplay" allowfullscreen></iframe>
 <!-- Botón para conocer todos los roles: lleva a segunda historia -->
       <div>
         <button id="todos-los-campeones" type="button">Conoce todos los campeones</button>
