Aplicación de eventos al menu y icono de la pagina (esquina superior izquierda) para home, según feedback de usuario

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <input type="checkbox" id="menu-bar"> 
           <label class="icon-menu" for="menu-bar"></label>
           <nav class="menu">
-            <a href="#primera-pantalla">HOME</a>
+            <a id='home2' href="#primera-pantalla">HOME</a>
             <a id='ir-a-roles' href="#segunda-pantalla">ROLES</a>
             <a  href="">CAMPEONES</a>
             <a id='ir-a-tutorial' href="#tutorial">GUÍA RÁPIDA</a>
@@ -35,7 +35,7 @@
         <div class="container">
           <img id="logo-lol" src="img/logo-lol.png" alt="logo-lol">
           <h1> NUEVA GUÍA PARA EL JUGADOR</h1>
-          <a href="#">Aquí</a>
+          <a href="#tutorial">Aquí</a>
         </div>
       </section>
     </main>
