Inicio de funciones para segunda y tercera historia de usuario

--- a/src/index.html
+++ b/src/index.html
@@ -63,12 +63,20 @@
 <!-- SECCIÓN: SEGUNDA HISTORIA DE USUARIO - ROLES-->
 <section id='segunda-pantalla' class='container'>
   <div class="bienvenida">
-      <h1 id="roles-titulo">Be an Expert in Champeon Roles </h1>
+      <h1 class="roles-titulo">Be an Expert in Champeon Roles </h1>
       <p class='description-text'>Get to know all the champions by role, and take game advantage in the Summoner's route</p>
   </div>
   <div id='todos-los-roles'></div>
-
 </section>
+
+<!-- SECCIÓN: TERCERA HISTORIA DE USUARIO - ROLES-->
+<section id='tercera-pantalla' class='container'> <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
+  <div class="bienvenida"><!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
+      <h1 class="roles-titulo">Be an Expert in Champeon Roles </h1>
+  </div>
+  <div id='todos-los-campeones-por-rol'></div>
+</section>
+
 <!-- BOTÓN PARA SUBIR AL INICIO -->
       <button onclick=topFunction() id="scrollToTop" title="Go to top">Top</button>
 <!-- FOOTER-->
