Se aplica filtrado, eventos y funciones para filtrar los campeones por rol y mostrar los datos (segun historia de usuario) en una tercera pantalla

--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,14 @@
   <div id='todos-los-campeones-por-rol'></div>
 </section>
 
+<!-- SECCIÓN: CUARTA HISTORIA DE USUARIO - ROLES-->
+<section id='cuarta-pantalla' class='container'> <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
+  <div class="bienvenida"><!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
+      <h1 class="roles-titulo">Champions</h1>
+  </div>
+  <div id='campeon'></div>
+</section>
+
 <!-- BOTÓN PARA SUBIR AL INICIO -->
       <button onclick=topFunction() id="scrollToTop" title="Go to top">Top</button>
 <!-- FOOTER-->
