--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <title>League of Legend Data</title>
-    <link rel='stylesheet' href='css/style.css' />
-    <link rel='stylesheet' href='css/fontello.css' />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/fontello.css" />
     <meta name="viewport" content="width= device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <link rel="shortcut icon" type="image/png" href="img/icon-game-lol.png"/>
   </head>
@@ -13,21 +13,21 @@
 <!-- HEADER y MENU-->
     <header >
         <div class="container">
-          <a id='home' href="#primera-pantalla">
+          <a id="home" href="#primera-pantalla">
               <img class ="logo" src="img/icon2.jpg" alt="logo">
           </a>
           <input type="checkbox" id="menu-bar"> 
           <label class="icon-menu" for="menu-bar"></label>
           <nav class="menu">
-            <a id='home2' href="#primera-pantalla">HOME</a>
-            <a id='ir-a-roles' href="#segunda-pantalla">ROLES</a>
+            <a id="home2" href="#primera-pantalla">HOME</a>
+            <a id="ir-a-roles" href="#segunda-pantalla">ROLES</a>
             <a  href="">CAMPEONES</a>
-            <a id='ir-a-tutorial' href="#tutorial">GUÍA RÁPIDA</a>
+            <a id="ir-a-tutorial" href="#tutorial">GUÍA RÁPIDA</a>
           </nav>
       </div>
     </header>
 <!-- DIV PADRE DE LA PRIMERA HISTORIA -->    
-<div id= 'primera-pantalla'>
+<div id= "primera-pantalla">
 <!--Banner-->
   <main>
       <section id="banner">
@@ -44,7 +44,7 @@
     <section class="container background">
       <div class="bienvenida">
         <h2>Conoce los 5 Mejores Campeones</h2>
-        <p class='description-text'>¡Y empieza tu viaje por la Ruta del Invocador!</p>
+        <p class="description-text">¡Y empieza tu viaje por la Ruta del Invocador!</p>
       </div>
       <section id="top-cinco">
         <div class ="container justify-content" id="descripion-de-los-top-5">
@@ -52,7 +52,7 @@
       </section>
     </section>    
 <!-- Tutorial -->
-        <p class= 'end'>Aprende a leer estadisticas Lol en 20 segundos</p>
+        <p class= "end">Aprende a leer estadisticas Lol en 20 segundos</p>
         <iframe id="tutorial" width="300" height="250" src="https://www.youtube.com/embed/yrMHPABTw38" frameborder="0" allow="accelerometer; autoplay" allowfullscreen></iframe>
 <!-- Botón para conocer todos los roles: lleva a segunda historia -->
       <div>
@@ -61,35 +61,35 @@
 </div>
 
 <!-- SECCIÓN: SEGUNDA HISTORIA DE USUARIO - ROLES-->
-<section id='segunda-pantalla' class='container'>
+<section id="segunda-pantalla" class="container">
   <div class="bienvenida">
       <h1 class="roles-titulo">Be an Expert in Champeon Roles </h1>
-      <p class='description-text'>Get to know all the champions by role, and take game advantage in the Summoner's route</p>
+      <p class="description-text">Get to know all the champions by role, and take game advantage in the Summoner's route</p>
   </div>
-  <div id='todos-los-roles'></div>
+  <div id="todos-los-roles"></div>
 </section>
 
 <!-- SECCIÓN: TERCERA HISTORIA DE USUARIO - ROLES-->
-<section id='tercera-pantalla' class='container'> <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
+<section id="tercera-pantalla" class="container"> <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
   <div id="titulo-del-rol" class="bienvenida"><!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
     <h1 class="roles-titulo">Be An Expert in Champions</h1>
   </div>
-  <div id='todos-los-campeones-por-rol'></div>
+  <div id="todos-los-campeones-por-rol"></div>
   <div>
     <button id="todos-los-cardroles" class="todos-los-campeones">Roles in the Game</button>
   </div>
 </section>
 
 <!-- SECCIÓN: CUARTA HISTORIA DE USUARIO - ROLES-->
-<section id='cuarta-pantalla' class='container'> <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
+<section id="cuarta-pantalla" class="container"> <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
   <div class="bienvenida"><!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
       <h1 class="roles-titulo">Champions</h1>
   </div>
   <div class="todos-los-campeones"></div>
 </section>
 
-<!-- BOTÓN PARA SUBIR AL INICIO -->
-      <button onclick=topFunction() id="scrollToTop" title="Go to top">Top</button>
+<!-- BOTÓN PARA SUBIR AL INICIO
+      <button onclick=topFunction() id="scrollToTop" title="Go to top">Top</button>-->
 <!-- FOOTER-->
       <footer>
         <div id="logo-en-footer">
@@ -113,6 +113,6 @@
     <script src="./data/lol/lol.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
-    <!--<script src=”prefixfree.min.js” type="text/javascript"></script> --
+    <!--<script src=”prefixfree.min.js” type="text/javascript"></script> -->
   </body>
 </html> 
