Aplicación de función computeStats para sacar el maximo campeon con vida por rol, función aun en desarrollo

--- a/src/index.html
+++ b/src/index.html
@@ -76,11 +76,14 @@
     <p id="numero-de-campeones" class="description-text"></p>
     <p id="description-del-rol" class="description-text"></p>
   </div>    
+  <div id="botones-para-mayor-y-menor-vida">
+    <button id="boton-para-mayor-y-menor-vida"class="todos-los-campeones botongris">Maximun Champeons with Life (Hp)</button>
+  </div>
   <div id="botones-para-ordenar">
     <button class="todos-los-campeones botónPequeño" id="ordenar-ascendente">Order by A-Z</button>
     <button class="todos-los-campeones botónPequeño" id="ordenar-descendente">Order by Z-A</button>
   </div>
-  <div id="todos-los-campeones-por-rol"></div>
+  <div id="todos-los-campeones-por-rol" ></div>
   <div>
     <button id="todos-los-cardroles" class="todos-los-campeones marginTop">Roles in the Game</button>
   </div>
@@ -89,9 +92,9 @@
 <!-- SECCIÓN: CUARTA HISTORIA DE USUARIO - ROLES-->
 <section id="cuarta-pantalla" class="container"> <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
   <div class="bienvenida"><!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
-      <h1 class="roles-titulo">Champions</h1>
+      <h1 class="roles-titulo">Champions with Maximun Life (Hp)</h1>
   </div>
-  <div class="todos-los-campeones"></div>
+  <div id ="campeones-con-maxima-y-minima-vida"></div>
 </section>
 
 <!-- BOTÓN PARA SUBIR AL INICIO
