Aprobación de test con las ultimas funciones

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,9 @@
     <p id="description-del-rol" class="description-text"></p>
   </div>    
   <div id="botones-para-mayor-y-menor-vida">
-    <button id="boton-para-mayor-y-menor-vida"class="todos-los-campeones botongris">Maximun Champeons with Life (Hp)</button>
+    <button id="boton-para-mayor-y-menor-vida" class="todos-los-campeones botongris">
+      Maximun Champeons with Life (Hp)
+    </button>
   </div>
   <div id="botones-para-ordenar">
     <button class="todos-los-campeones botónPequeño" id="ordenar-ascendente">Order by A-Z</button>
