Se aplica correción del html en clases por sugerencia coach

--- a/src/index.html
+++ b/src/index.html
@@ -87,12 +87,12 @@
     </button>
   </div>
   <div id="botones-para-ordenar">
-    <button class="todos-los-campeones botónPequeño" id="ordenar-ascendente">Order by A-Z</button>
-    <button class="todos-los-campeones botónPequeño" id="ordenar-descendente">Order by Z-A</button>
+    <button class="todos-los-campeones boton-pequeño" id="ordenar-ascendente">Order by A-Z</button>
+    <button class="todos-los-campeones boton-pequeño" id="ordenar-descendente">Order by Z-A</button>
   </div>
   <div id="todos-los-campeones-por-rol" ></div>
   <div>
-    <button id="todos-los-cardroles" class="todos-los-campeones marginTop">Roles in the Game</button>
+    <button id="todos-los-cardroles" class="todos-los-campeones margin-top">Roles in the Game</button>
   </div>
 </section>
 
