--- a/src/index.html
+++ b/src/index.html
@@ -1,145 +1,152 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>League of Legend Data</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/fontello.css" />
     <meta name="viewport" content="width= device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
-    <link rel="shortcut icon" type="image/png" href="img/icon-game-lol.png"/>
-  </head>
+    <link rel="shortcut icon" type="image/png" href="img/icon-game-lol.png" />
+</head>
 
-  <body>
-<!-- HEADER y MENU-->
-    <header >
+<body>
+    <!-- HEADER y MENU-->
+    <header>
         <div class="container">
-          <a id="home" href="#primera-pantalla">
-              <img class ="logo" src="img/icon2.jpg" alt="logo">
-          </a>
-          <input type="checkbox" id="menu-bar"> 
-          <label class="icon-menu" for="menu-bar"></label>
-          <nav class="menu">
-            <a id="home2" href="#primera-pantalla">HOME</a>
-            <a id="ir-a-roles" href="#segunda-pantalla">ROLES</a>
-            <a  href="">CAMPEONES</a>
-            <a  id="go-to-stadistics" href="#fifth-screen">ESTADISTICAS</a>
-            <a id="ir-a-tutorial" href="#tutorial">GUÍA RÁPIDA</a>
-          </nav>
-      </div>
+            <a id="home" href="#primera-pantalla">
+                <img class="logo" src="img/icon2.jpg" alt="logo">
+            </a>
+            <input type="checkbox" id="menu-bar">
+            <label class="icon-menu" for="menu-bar"></label>
+            <nav class="menu">
+                <a id="home2" href="#primera-pantalla">HOME</a>
+                <a id="ir-a-roles" href="#segunda-pantalla">ROLES</a>
+                <a href="">CAMPEONES</a>
+                <a id="go-to-stadistics" href="#fifth-screen">ESTADISTICAS</a>
+                <a id="ir-a-tutorial" href="#tutorial">GUÍA RÁPIDA</a>
+            </nav>
+        </div>
     </header>
-<!-- DIV PADRE DE LA PRIMERA HISTORIA -->    
-<div id= "primera-pantalla">
-<!--Banner-->
-  <main>
-    <section id="banner">
-      <div>
-          <img class="mySlides" src="img/banner-background.jpg" alt="banner">
-          <img class="mySlides" src="img/banner-background2.jpg" alt="banner">
-          <img class="mySlides" src="img/banner-background3.jpg" alt="banner">
-          <img class="mySlides" src="img/banner-background4.jpg" alt="banner">
-      </div>
-      <div class="container container1000px">
-        <h1> THE BEST GUIDE FOR THE BEGGINER</h1>
-        <a href="#tutorial">Click here</a>
-      </div>
-    </section>
-  </main>
-  
-<!-- SECCIÓN: PRIMERA HISTORIA DE USUARIO - TOP 5-->
-  <section class="container container1000px background">
-    <div class="bienvenida">
-      <h2>Champions of the week</h2>
-      <p class="description-text">¡Every week you´ll have a set of champions to win!</p>
-    </div>
-    <section id="top-cinco">
-      <div class ="container container1000px justify-content" id="descripion-de-los-top-5">
-      </div>
-    </section>
-  </section>      
-<!-- Tutorial -->
-  <p class= "end">Lear to play in 20 seconds (not a joke)</p>
-  <iframe id="tutorial" src="https://www.youtube.com/embed/yrMHPABTw38" frameborder="0" allow="accelerometer; autoplay" allowfullscreen></iframe>
-  <!--<div>
+    <!-- DIV PADRE DE LA PRIMERA HISTORIA -->
+    <div id="primera-pantalla">
+        <!--Banner-->
+        <main>
+            <section id="banner">
+                <div>
+                    <img class="mySlides" src="img/banner-background.jpg" alt="banner">
+                    <img class="mySlides" src="img/banner-background2.jpg" alt="banner">
+                    <img class="mySlides" src="img/banner-background3.jpg" alt="banner">
+                    <img class="mySlides" src="img/banner-background4.jpg" alt="banner">
+                </div>
+                <div class="container container1000px">
+                    <h1> THE BEST GUIDE FOR THE BEGGINER</h1>
+                    <a href="#tutorial">Click here</a>
+                </div>
+            </section>
+        </main>
+
+        <!-- SECCIÓN: PRIMERA HISTORIA DE USUARIO - TOP 5-->
+        <section class="container container1000px background">
+            <div class="bienvenida">
+                <h2>Champions of the week</h2>
+                <p class="description-text">¡Every week you´ll have a set of champions to win!</p>
+            </div>
+            <section id="top-cinco">
+                <div class="container container1000px justify-content" id="descripion-de-los-top-5">
+                </div>
+            </section>
+        </section>
+        <!-- Tutorial -->
+        <p class="end">Learn to play in 20 seconds (not a joke)</p>
+        <iframe id="tutorial" src="https://www.youtube.com/embed/yrMHPABTw38" frameborder="0" allow="accelerometer; autoplay" allowfullscreen></iframe>
+        <!--<div>
       <a class="tutorial"  >
         <img class="tutorial" src="img/img-tutorial.png" alt="imagen-del-tutorial">
       </a>
   </div>-->
 
-<!-- Botón para conocer todos los roles: lleva a segunda historia -->
-  <div>
-    <button id="todos-los-campeones" class="todos-los-campeones" type="button">Go to Roles</button>
-  </div>
-</div>
+        <!-- Botón para conocer todos los roles: lleva a segunda historia -->
+        <div>
+            <button id="todos-los-campeones" class="todos-los-campeones" type="button">Go to Roles</button>
+        </div>
+    </div>
 
-<!-- SECCIÓN: SEGUNDA HISTORIA DE USUARIO - ROLES-->
-  <section id="segunda-pantalla" class="container container1000px">
-  <div class="bienvenida">
-      <h1 class="roles-titulo">Be an Expert in Champeon Roles </h1>
-      <p class="description-text">Get to know all the champions by role, and take game advantage in the Summoner's route</p>
-  </div>
-  <div id="todos-los-roles"></div>
-  </section>
+    <!-- SECCIÓN: SEGUNDA HISTORIA DE USUARIO - ROLES-->
+    <section id="segunda-pantalla" class="container container1000px">
+        <div class="bienvenida">
+            <h1 class="roles-titulo">Be an Expert in Champeon Roles </h1>
+            <p class="description-text">Get to know all the champions by role, and take game advantage in the Summoner's route</p>
+        </div>
+        <div id="todos-los-roles"></div>
+    </section>
 
-<!-- SECCIÓN: TERCERA HISTORIA DE USUARIO - ROLES-->
-  <section id="tercera-pantalla" class="container container1000px"> <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
-    <div id="titulo-del-rol" class="bienvenida"><!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
-      <h1 id= "titulo" class="roles-titulo upperstyle"></h1>
-      <p id="numero-de-campeones" class="description-text"></p>
-      <p id="description-del-rol" class="description-text"></p>
-    </div>    
-    <div id="botones-para-mayor-y-menor-vida">
-      <button id="boton-para-mayor-y-menor-vida" class="todos-los-campeones botongris">
+    <!-- SECCIÓN: TERCERA HISTORIA DE USUARIO - ROLES-->
+    <section id="tercera-pantalla" class="container container1000px">
+        <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
+        <div id="titulo-del-rol" class="bienvenida">
+            <!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
+            <h1 id="titulo" class="roles-titulo upperstyle"></h1>
+            <p id="numero-de-campeones" class="description-text"></p>
+            <p id="description-del-rol" class="description-text"></p>
+        </div>
+        <div id="botones-para-mayor-y-menor-vida">
+            <button id="boton-para-mayor-y-menor-vida" class="todos-los-campeones botongris">
         Maximun Champeons with Life (Hp)
       </button>
-    </div>
-    <div id="botones-para-ordenar">
-      <button class="todos-los-campeones boton-pequeño" id="ordenar-ascendente">Order by A-Z</button>
-      <button class="todos-los-campeones boton-pequeño" id="ordenar-descendente">Order by Z-A</button>
-    </div>
-    <div id="todos-los-campeones-por-rol" ></div>
-    <div>
-      <button id="todos-los-cardroles" class="todos-los-campeones margin-top">Roles in the Game</button>
-    </div>
-  </section>
+        </div>
+        <div id="botones-para-ordenar">
+            <button class="todos-los-campeones boton-pequeño" id="ordenar-ascendente">Order by A-Z</button>
+            <button class="todos-los-campeones boton-pequeño" id="ordenar-descendente">Order by Z-A</button>
+        </div>
+        <div id="todos-los-campeones-por-rol"></div>
+        <div>
+            <button id="todos-los-cardroles" class="todos-los-campeones margin-top">Roles in the Game</button>
+        </div>
+    </section>
 
-<!-- SECCIÓN: CUARTA HISTORIA DE USUARIO - ROLES-->
-  <section id="cuarta-pantalla" class="container container1000px"> <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
-    <div class="bienvenida"><!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
-        <h1 class="roles-titulo">Champions with Maximun Life (Hp)</h1>
-    </div>
-    <div id ="campeones-con-maxima-y-minima-vida"></div>
-  </section>
+    <!-- SECCIÓN: CUARTA HISTORIA DE USUARIO - ROLES-->
+    <section id="cuarta-pantalla" class="container container1000px">
+        <!-- Selecciono todo lo que hay dentro de la pantalla para ocultar-->
+        <div class="bienvenida">
+            <!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
+            <h1 class="roles-titulo">Champions with Maximun Life (Hp)</h1>
+        </div>
+        <div id="campeones-con-maxima-y-minima-vida"></div>
+    </section>
 
-  <section id="fifth-screen">
-    <div class="bienvenida"><!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
-      <h1 class="roles-titulo">How many champions are there per category?</h1>
-    </div>
-    <div id ="champions-per-category">
-      <div id="filter-div"></div>
-      <div id="chart-div"></div>
-    </div>
-  </section>
+    <section id="fifth-screen">
+        <div class="bienvenida">
+            <!-- Encierro el titulo dentro de un div padre que le aplica estilos automatico-->
+            <h1 class="roles-titulo">How many champions are there per category?</h1>
+        </div>
+        <div id="champions-per-category">
+            <div id="filter-div"></div>
+            <div id="chart-div"></div>
+        </div>
+    </section>
 
-<!-- FOOTER-->
+    <!-- FOOTER-->
     <footer>
-      <div id="logo-en-footer">
-          <img src="img/lol.png" alt="Logo para footer" >
-      </div>
-      <div id="redes-en-footer">
-        <a class ="icon-facebook" href="https://es-la.facebook.com/leagueoflegends/"></a>
-        <a class ="icon-instagram" href="https://www.instagram.com/leagueoflegends/?hl=es"></a>
-        <a class ="icon-youtube-play" href="https://www.youtube.com/user/RiotGamesInc"></a>
-        <a class ="icon-globe" href="https://euw.leagueoflegends.com/es/"></a>
-      </div>
-      <p>Copyright © Todos los Derechos Reservados </p>
+        <div id="logo-en-footer">
+            <img src="img/lol.png" alt="Logo para footer">
+        </div>
+        <div id="redes-en-footer">
+            <a class="icon-facebook" href="https://es-la.facebook.com/leagueoflegends/"></a>
+            <a class="icon-instagram" href="https://www.instagram.com/leagueoflegends/?hl=es"></a>
+            <a class="icon-youtube-play" href="https://www.youtube.com/user/RiotGamesInc"></a>
+            <a class="icon-globe" href="https://euw.leagueoflegends.com/es/"></a>
+        </div>
+        <p>Copyright © Todos los Derechos Reservados </p>
     </footer>
 
-  
+
     <div id="root"></div>
     <script src="./data/lol/lol.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
     <!--<script src=”prefixfree.min.js” type="text/javascript"></script> -->
-  </body>
-</html> 
+</body>
+
+</html>
